--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "socket.io": "4.8.1"
+    "socket.io": "4.8.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "eslint": "^9.9.0",
