--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "socket.io": "4.8.1",
     "zod": "^3.22.4"
   },
