--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "type": "module",
   "scripts": {
     "dev": "node server.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -15,9 +18,12 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "eslint": "^9.9.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.3.3"
+    "jest": "^30.2.0",
+    "prettier": "^3.3.3",
+    "supertest": "^7.1.4"
   }
 }
